--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -1,30 +1,26 @@
-// .tabbar-layout {
-//   position: fixed;
-//   left: 0;
-//   bottom: 0;
-//   z-index: 1000;
-//   width: 100%;
-//   height: 48px;
-//   background-color: #fff;
-//   box-shadow: 0 -4px 4px rgba(0, 0, 0, 0.15);
-// }
-
-// .backtop-layout {
-//   position: fixed;
-//   right: 10px;
-//   bottom: 60px;
-//   z-index: 1100;
-//   /* background-color: red; */
-// }
 @mixin  flex($direction:row,$inline:block,$justify:center,$align:center) {
   display: if($inline==block,flex,inline-flex);
   justify-content: $justify;
   align-items: $align;
-  flex-wrap: wrap;
   flex-direction: $direction;
+  flex-wrap: wrap;
 }
 @mixin ellipsis {
   overflow: hidden;
   text-overflow:ellipsis;
   white-space: nowrap;
+}
+@mixin font-style {
+  font-family: PingFangSC-Regular;
+  font-size: 14px;
+  color: #666666;
+}
+@mixin  fix-position($site:top) {
+  position: fixed;
+  z-index: 40;
+  @if($site==top){
+    top:0
+  }@else{
+    bottom: 0;
+  }
 }
