--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -1,8 +1,8 @@
 html,
 body {
-  // overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   width: 100%;
-  height: 4000px;
   background-color: #f5f5f5;
 }
 $body-bgc:#f5f5f5;
