--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -5,10 +5,18 @@
   flex-direction: $direction;
   flex-wrap: wrap;
 }
-@mixin ellipsis {
+@mixin ellipsis($singe:single) {
   overflow: hidden;
   text-overflow:ellipsis;
-  white-space: nowrap;
+  @if($singe==single){
+    white-space: nowrap;
+  }@else{
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    white-space: normal !important;
+    word-wrap: break-word;
+  }
 }
 @mixin font-style {
   font-family: PingFangSC-Regular;
