修复header下滑时渐变失效bug

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -3,6 +3,7 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
   width: 100%;
+  height: auto;
   background-color: #f5f5f5;
 }
 $body-bgc:#f5f5f5;
