flex类sass重新封装

--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -1,7 +1,5 @@
-@mixin  flex($direction:row,$inline:block,$justify:center,$align:center) {
+@mixin  flex($direction:row,$inline:block) {
   display: if($inline==block,flex,inline-flex);
-  justify-content: $justify;
-  align-items: $align;
   flex-direction: $direction;
   flex-wrap: wrap;
 }
