cdn加速优化项目，图片懒加载优化，去掉大字体库

--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -1,7 +1,7 @@
-@font-face {
-  font-family: 'PingFangSCRegular';
-  src: url('../fonts/PingFangSCRegular.ttf') format('truetype');
-}
+// @font-face {
+//   font-family: 'PingFangSCRegular';
+//   src: url('../fonts/PingFangSCRegular.ttf') format('truetype');
+// }
 
 html,
 body,
@@ -45,7 +45,7 @@ nav {
   border: none;
   outline: none;
 
-  font-family: 'PingFangSCRegular';
+  // font-family: 'PingFangSCRegular';
 }
 
 i,
